--- a/app/index.html
+++ b/app/index.html
@@ -7,10 +7,15 @@
   <style>
     body {
       margin: 10px auto;
-      width: 35rem;
+      width: 100%;
+      max-width: 35rem;
       font-family: monospace;
       background: #282c34;
       color: white;
+    }
+    header {
+      display: flex;
+      justify-content: center;
     }
     section {
       text-align: center;
@@ -30,20 +35,23 @@
     }
     ul {
       list-style-type: none;
+      padding: 0;
     }
   </style>
 </head>
 <body>
+<header>
 <pre>
-           _____ _        _   _        __  __
-          / ____| |      | | (_)      |  \/  |
-         | (___ | |_ __ _| |_ _  ___  | \  / | __ _ _ __  ___
-          \___ \| __/ _` | __| |/ __| | |\/| |/ _` | '_ \/ __|
-          ____) | || (_| | |_| | (__  | |  | | (_| | |_) \__ \
-         |_____/ \__\__,_|\__|_|\___| |_|  |_|\__,_| .__/|___/
-                                                   | |
-                                                   |_|
+  _____ _        _   _        __  __
+ / ____| |      | | (_)      |  \/  |
+| (___ | |_ __ _| |_ _  ___  | \  / | __ _ _ __  ___
+ \___ \| __/ _` | __| |/ __| | |\/| |/ _` | '_ \/ __|
+ ____) | || (_| | |_| | (__  | |  | | (_| | |_) \__ \
+|_____/ \__\__,_|\__|_|\___| |_|  |_|\__,_| .__/|___/
+                                          | |
+                                          |_|
 </pre>
+</header>
 <section>
   COMMIT: {{ COMMIT }}
   <br>
@@ -69,7 +77,7 @@
   Three other get parameters can also be used:
   <ul>
     <li>
-      <code>zoom</code> - for the zoom level of the map, default: <code>17</code>.
+      <code>zoom</code> - for the zoom level of the map, default: <code>10</code>.
     </li>
     <li>
       <code>width</code> - for the width of the image generated, default: <code>600</code>.
