--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,10 @@
     Maps are generated using <a href="https://www.openstreetmap.org/copyright">Open Street Maps</a>
     data and services.
   </p>
+  <p>
+    See <a href="https://github.com/tutorcruncher/static-maps">github.com/tutorcruncher/static-maps</a>
+    for more details
+  </p>
 </section>
 <section>
   To generate a map go to:
