tweak index.html

--- a/app/index.html
+++ b/app/index.html
@@ -62,12 +62,12 @@
     Generator of map images.
   </p>
   <p>
-    Maps are generated using <a href="https://www.openstreetmap.org/copyright">Open Street Maps</a>
+    Maps are generated using <a target="_blank" href="https://www.openstreetmap.org/copyright">Open Street Maps</a>
     data and services.
   </p>
   <p>
-    See <a href="https://github.com/tutorcruncher/static-maps">github.com/tutorcruncher/static-maps</a>
-    for more details
+    See <a target="_blank" href="https://github.com/tutorcruncher/static-maps">github.com/tutorcruncher/static-maps</a>
+    for more details.
   </p>
 </section>
 <section>
@@ -78,7 +78,13 @@
       /map.jpg?lat=&lt;latitude&gt;&lng=&lt;longitude&gt;
     </code>
   </p>
-  Three other get parameters can also be used:
+  Eg.
+  <p>
+    <code>
+      /map.jpg?lat=51.179&lng=-2.098
+    </code>
+  </p>
+  Three other <code>GET</code> parameters can also be used:
   <ul>
     <li>
       <code>zoom</code> - for the zoom level of the map, default: <code>10</code>.
