reduce scaling, update index

--- a/app/index.html
+++ b/app/index.html
@@ -84,7 +84,7 @@
       /map.jpg?lat=51.179&lng=-2.098
     </code>
   </p>
-  Three other <code>GET</code> parameters can also be used:
+  Five other <code>GET</code> parameters can also be used:
   <ul>
     <li>
       <code>zoom</code> - for the zoom level of the map, default: <code>10</code>.
@@ -94,6 +94,13 @@
     </li>
     <li>
       <code>height</code> - for the height of the image generated, default: <code>400</code>.
+    </li>
+    <li>
+      <code>marker</code> - whether to show a marker use <code>false</code> to hide, default: <code>true</code>.
+    </li>
+    <li>
+      <code>scale</code> - map scaling (currently doesn't work with names on the map),
+      values of <code>1</code> or <code>2</code> are valid, default: <code>1</code>.
     </li>
   </ul>
 </section>
